--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vivek Kharb</title>
-    <link rel="stylesheet" href="css/main.css">
+    <title>Tanisha Jindal</title>
+    <link rel="stylesheet" href="main.css">
     <link rel="icon" href="favicon.ico?v=2">
     <!-- ?v=2 agar favicon work nahi kr rha to -->
     <!-- g=har device har browser ke liye connect -->
@@ -16,7 +16,7 @@
 <body>
     <div class="top-container">
     <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
-    <H1>Hi, I'm Vivek</H1>
+    <H1>Hi, I'm Tanisha</H1>
     <h2>a Web Designer.</h2>
     <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
     <img src="images/mountain.png" alt="mountain-img">
@@ -25,7 +25,7 @@
     <div class="profile">
       <img class="kharb" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjC3CSb_yzj_8yQe9dUPiIhQwkkPZ4bLOKfFVVesSjnwlualP6w1KoybztO01RFaYbeNWL-0aXQXbWNR6CNrFzVjslUAzWxMbWTUcFUTB2VMhcc4i9Rcex9WxqZL87Ri5poaluu4Bnz2EX8asjlaC66l0o9uSnL6VM-E7x9Wr6Gp-ZzkneA5epmaVt2xg/s1600/PicsArt_07-25-09.47.55.jpg" alt="">
       <h2>Hello.</h2>
-      <p class="intro">I'm a blogger by passion and Engineer by profession. I'm the founder of the website All 4 Everyone. I ❤️ Blogging and my crazy moods.</p>
+      <p class="intro">I'm a blogger by passion and Engineer by profession. I'm the founder of the website Skills Joy. I ❤️ Blogging and my crazy moods.</p>
     </div>
     <hr>
     <div class="skills">
