--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
    </div>
    <div class="middle-container">
     <div class="profile">
-      <img class="kharb" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjC3CSb_yzj_8yQe9dUPiIhQwkkPZ4bLOKfFVVesSjnwlualP6w1KoybztO01RFaYbeNWL-0aXQXbWNR6CNrFzVjslUAzWxMbWTUcFUTB2VMhcc4i9Rcex9WxqZL87Ri5poaluu4Bnz2EX8asjlaC66l0o9uSnL6VM-E7x9Wr6Gp-ZzkneA5epmaVt2xg/s1600/PicsArt_07-25-09.47.55.jpg" alt="">
+      <img class="kharb" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEibhroOqFf4hwJh2VWO0HqwNri7DAhwJmniTum8ErhfJhmKgvyPrViHj2IStYk63yKiwW02FZsrWiGK6NNKrjvCxKqxrnhUkLPDqcYpXaOdmYFwA4Gw5Y0ZNa4dGdZm-vpwwnheTOAIiueTlmyP-MhbrCQJXSnu-Dqh2V_fW_mWyBw6egfE2XXk_0WIVw/s283/tanisha-jindal.jpeg" alt="">
       <h2>Hello.</h2>
       <p class="intro">I'm a blogger by passion and Engineer by profession. I'm the founder of the website Skills Joy. I ❤️ Blogging and my crazy moods.</p>
     </div>
