--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="profile">
       <img class="kharb" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEibhroOqFf4hwJh2VWO0HqwNri7DAhwJmniTum8ErhfJhmKgvyPrViHj2IStYk63yKiwW02FZsrWiGK6NNKrjvCxKqxrnhUkLPDqcYpXaOdmYFwA4Gw5Y0ZNa4dGdZm-vpwwnheTOAIiueTlmyP-MhbrCQJXSnu-Dqh2V_fW_mWyBw6egfE2XXk_0WIVw/s283/tanisha-jindal.jpeg" alt="">
       <h2>Hello.</h2>
-      <p class="intro">I'm a blogger by passion and Engineer by profession. I'm the founder of the website Skills Joy. I ❤️ Blogging and my crazy moods.</p>
+      <p class="intro">I'm a blogger by passion and Engineer by profession. I'm the founder of the website Skills Joy. I ❤️ Blogging and cooking food.</p>
     </div>
     <hr>
     <div class="skills">
@@ -36,17 +36,17 @@
         <p>I Started Learning to code when I was 18 years old because I wanted to make my own websites. Over time, I have gained a wealth of experience designing and developing mobile responsive and web applications.</p>
       </div>
       <div class="skill-row">
-        <img class="kharb chillipng" src="images/chillies.png" alt="">
-        <h3>Fully Moody Challange</h3>
-        <p class="dolor">But my best skill is actually my different and crazy moods like chillies. I am undisputed king of my own moods challanges.</p>
+        <img class="kharb chillipng" src="images/python.png" alt="">
+        <h3>Python</h3>
+        <p class="dolor">I love the fact that it's simple yet powerful language, which allows a wide area where one can create a lot of interesting things.</p>
       </div>
     </div>
     <hr>
     <div class="contact-me">
       <h2>Get In Touch</h2>
-      <h3>If you are moody as much as I do.</h3>
-      <p class="getintouchpara">Love your moods as much as I do? Let's talk about it how awesomethey are! We can code while we have are in bad moods!</p>
-      <a class="btn" href="mailto:jaatsahab400@gmail.com">CONTACT ME</a></div>
+      <h3>If you also love to solve mysteries.</h3>
+      <p class="getintouchpara">If you also like to create you new, amazing things and love to solve mysteries then let's talk.  We can code and talk.</p>
+      <a class="btn" href="mailto:tanishajindal8@gmail.com">CONTACT ME</a></div>
   </div>
   
   
