--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <p>I Started Learning to code when I was 18 years old because I wanted to make my own websites. Over time, I have gained a wealth of experience designing and developing mobile responsive and web applications.</p>
       </div>
       <div class="skill-row">
-        <img class="kharb chillipng" src="images/python.png" alt="">
+        <img class="kharb chillipng" src="images/python.jfif" alt="">
         <h3>Python</h3>
         <p class="dolor">I love the fact that it's simple yet powerful language, which allows a wide area where one can create a lot of interesting things.</p>
       </div>
