--- a/index.html
+++ b/index.html
@@ -51,11 +51,9 @@
   
   
   <div class="bottom-container">
-    <a class="footer-link" href="https://www.instagram.com/Vivekk1221">Instagram</a>
-    <a class="footer-link" href="https://www.facebook.com/people/All-4-Everyone/100085544871621/">Facebook</a>
-    <a class="footer-link" href="https://pin.it/5Z0MT2f">Pinterest</a>
-    <a class="footer-link" href="https://www.all4everyone.in/">All 4 Everyone</a>
-    <p class="copyright">© Vivek Kharb.</p>
+    <a class="footer-link" href="https://www.instagram.com/ta.nisha5089">Instagram</a>
+    <a class="footer-link" href="https://www.skillsjoy.com/">Skills Joy</a>
+    <p class="copyright">© Tanisha Jindal.</p>
   </div>
   
 </body>
